# pg-tui

./: .gitignore  Cargo.toml  LICENSE  PKGBUILD  README.md
src/: app.rs  autocomplete.rs  config.rs  events.rs  formatter.rs  main.rs  syntax.rs
src/app/: connection_selector.rs
src/db/: connection.rs  mod.rs  queries.rs
src/ui/: browser.rs  connection.rs  connection_selector.rs  mod.rs  query.rs
