[package]
name = "psql_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
# TUI Framework
ratatui = "0.29"
crossterm = "0.28"

# Async Runtime
tokio = { version = "1.41", features = ["full"] }

# PostgreSQL Client
tokio-postgres = "0.7"

# Serialization for config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# User directories
dirs = "5.0"

# Text editing
tui-textarea = "0.7"
