[package]
name = "pg-tui"
version = "0.1.0"
edition = "2021"
authors = ["anjaljoshi6@gmail.com"]
description = "A modern PostgreSQL TUI client with autocomplete, syntax highlighting, and query formatting"
license = "MIT"
repository = "https://github.com/notcool100/pg-tui"
homepage = "https://github.com/notcool100/pg-tui"
keywords = ["postgresql", "tui", "database", "cli", "terminal"]
categories = ["command-line-utilities", "database"]
readme = "README.md"

[dependencies]
# TUI Framework
ratatui = "0.29"
crossterm = "0.28"

# Async Runtime
tokio = { version = "1.41", features = ["full"] }

# PostgreSQL Client
tokio-postgres = "0.7"

# Serialization for config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# User directories
dirs = "5.0"

# Text editing
tui-textarea = "0.7"
